# llm_assignment

./: .gitignore
retailnext_outfit_assistant/: .env.template  README.md  pyproject.toml  requirements.txt
retailnext_outfit_assistant/app/: __init__.py  api_server.py
retailnext_outfit_assistant/app/web/: home.js  index.html  personalized.html  personalized.js  styles.css
retailnext_outfit_assistant/data/: .gitignore
retailnext_outfit_assistant/deliverables/: AI-Powered_Product_Discovery_for_RetailNext_FINAL.pptx  DELIVERABLES_README.md  ONSITE_20MIN_RUN_OF_SHOW.md  VIDEO_WALKTHROUGH_SCRIPT.md
retailnext_outfit_assistant/docs/: ARCHITECTURE.md  CHECK_YOUR_MATCH.md  README.md  TROUBLESHOOTING.md
retailnext_outfit_assistant/docs/releases/: v1.0.0.md
retailnext_outfit_assistant/scripts/: build_retailnext_assignment_deck.py  capture_retailnext_screens.js  download_sample_clothes.py  run_api_dev.sh
retailnext_outfit_assistant/src/retailnext_outfit_assistant/: __init__.py  assistant.py  catalog.py  db.py  inventory.py  openai_utils.py  retrieval.py  service.py
retailnext_outfit_assistant/src/retailnext_outfit_assistant.egg-info/: SOURCES.txt  top_level.txt
