[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retailnext-outfit-assistant"
version = "0.1.0"
requires-python = ">=3.10"
description = "RetailNext multimodal outfit assistant demo (GPT-4o + RAG)"
readme = "README.md"
dependencies = [
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
